fix css menu, scrollbar

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2,6 +2,10 @@
 body {
   font-size: 18px; 
   max-width: 100%;
+  padding: 0;
+  padding-left: 0;;
+  margin: 0;
+  margin-left: 0;
     
 }
 
@@ -13,7 +17,9 @@ a:hover {
   color: indianred; }
 
 .wrapper {
-  margin: 0 auto; }
+  margin: 0 auto;
+  text-align: center;
+ }
 
 .nav-cach {
   background: #eee;
@@ -131,6 +137,7 @@ a:hover {
   margin-top: 20px; }
 
 .dropdown {
+  margin-left: -400px;
   position: relative;
   display: inline-block; }
 
@@ -165,17 +172,14 @@ a:hover {
   filter: invert(1); }
 
 .slide-show {
-  max-width: 60%;
+  max-width: 600px;
   float: right;
-  margin-top: 20px; }
+  margin-top: 20px;
+margin-right: 33px; }
 
 .mySlides {
   display: none;
-  width: 700px;
-  height: 400px;
-  object-fit: cover;
-  object-position: 50% 60%;
-  margin-right: 50px; }
+  width: 90%; }
 
 .img-face {
   width: 100%; }
@@ -198,7 +202,6 @@ h2 {
 .list-menu{
   position: sticky;
     display: inline-block;
-    min-width: 1263px;
     width: auto;
 }
 .list-menu-ul {
@@ -228,27 +231,23 @@ h2 {
 
 .list-item {
     display: flex;
-    justify-content: flex-start;
     text-align: center;
+    flex-direction: row;
     flex-wrap: wrap;
-    
+    justify-content: center;
   }
 .img-item {
-  max-width: 300px;
-  width: auto;
- }
- .img-item1 {
-  margin-right: 40px;
-    max-width: 450px;
-    width: auto;
- }
+    /* margin-right: 40px; */
+    /* max-width: 300px; */
+    width: 300px;
+    height: 300px;
+    /* width: auto; */
+}
  .img-item:hover{
   border: 2px solid indianred;
  }
 .list-item-div{
   width: 30%;
-  margin: auto;
-
 }
 .span-footer {
   background: #333;
@@ -256,7 +255,6 @@ h2 {
   margin: 10px 50px; }
 
 .img-footer {
-  width: 100%;
   margin: 10px 70px;
   font-size: 14px; 
   text-align: left;
@@ -613,18 +611,4 @@ h5 {
 }
 .btn-detail:focus{
   background: indianred;
-}
-.topping-form{
-  display: inline-flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  flex-direction: row;
-}
-.table-item{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  flex-direction: row;
-  max-width: 500px;
-  width: auto;
 }
